--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     testImplementation group: 'org.testng', name: 'testng', version: '7.1.0'
 
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
+    implementation group: 'io.qameta.allure', name: 'allure-testng', version: '2.17.3'
+
 }
 
 test {
